--- a/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
@@ -899,9 +899,9 @@ holst.10.t:0 "란트바흐트의 형성"
 holst.10.d:0 "요르단 폭동의 결과, 경찰은 시위자들의 무리 속에 있다가 군인들이 나타나는 순간 사라진 검은 셔츠 젊은이들이 단순한 폭력배들이 아니라는 것을 재빨리 알아냈습니다. 이는 아마도 코르넬리스 판 힐켈크가 직접 이끌고 VNH가 설립한 준군사 조직인 란트바흐트의 첫 공개 모습을 보여줍니다.\n\n요르단 이래, 란트바흐트는 전국적으로 나타났고, VNH 집회에 서서 망을 보고, 좌익 단체들의 회의를 방해하고, 때로는 그들의 생디칼리스트 상대인 민족 붉은 전선 또는 ' 붉은 전선'과 싸움을 벌였습니다. 그들은 주요 도시들의 거리를 통과하는 훈련되고, 군국주의적인 행진을 통해 많은 군중을 끌어 모으고, 특히 젊은이들 사이에서 더 많은 신입들을 끌어 모읍니다.\n\n란트바흐트는 빠르게 무시할 수 없는 세력이 되어가고 있고, 그 수는 여전히 늘어나고 있습니다 - 선거 기간 동안 그들이 침묵할 가능성은 낮습니다...."
 holst.10.a:0 "맙소사!"
 
-holst.11.t:0 "The Death of Van Gybland Oosterhoff"
-holst.11.d:0 "The leader of the ultra-nationalist VNH, Van Gybland Oosterhoff, died today in his home in Amsterdam.\n\nHis last few years had seen a rapid rise in fortunes of the VNH, brought on by the economic struggles facing many in the country, fear of Syndicalism and disillusionment with democracy. However, the party he leaves behind is highly divided itself between the young, newer members of the party lead by Cornelis van Geelkerken and the older, more established segment possessing ties to the Dutch military and bureaucracy in the hands of H.N.A. Swart.\n\nSwart has been named the new party leader with van Geelkerken his deputy, and the pair look set to challenge the established parties for control of the Hague in the May elections - provided the two wings can keep working together."
-holst.11.a:0 "We must be careful with them..."
+holst.11.t:0 "판 기블렌 오스터호프의 사망"
+holst.11.d:0 "매우 민족주의적인 VNH의 지도자, 판 기블렌 오스터호프가 오늘 암스테르담에 있는 그의 자택에서 숨졌습니다.\n\nHis last few years had seen a rapid rise in fortunes of the VNH, brought on by the economic struggles facing many in the country, fear of Syndicalism and disillusionment with democracy. However, the party he leaves behind is highly divided itself between the young, newer members of the party lead by Cornelis van Geelkerken and the older, more established segment possessing ties to the Dutch military and bureaucracy in the hands of H.N.A. Swart.\n\nSwart has been named the new party leader with van Geelkerken his deputy, and the pair look set to challenge the established parties for control of the Hague in the May elections - provided the two wings can keep working together."
+holst.11.a:0 "그들을 조심해야 한다..."
 
 holst.12.t:0 "네덜란드의 사회 불안"
 holst.12.d:0 "지난 몇달 동안 좌파와 우파의 준군사 조직 간 충돌이 증가해 왔고, 대도시에서는 총격전이 거의 매일 일어나고 있습니다. 파업과 이에 따라 경찰이나 란트바흐트의 '검은 셔츠'가 파업 참가자들의 피켓을 부수는 일은 흔한 일입니다. 경찰은 질서 유지에 실패하였으며 군대는 지원을 제안했지만, 이는 반대 의견을 증가시키고 더 나아가 시민 불복종 운동을 일으켰습니다. 상황이 계속 악화된다면 5월의 선거는 현존하는 사람들의 기억 속에서 가장 논란이 많을 것입니다."
@@ -921,9 +921,9 @@ holel.1.c:0 "CNA가 유세를 유지했다."
 holel.1.e:0 "VNH가 다수당이 됐다."
 
 holel.2.t:0 "중도 좌파 내각"
-holel.2.d:0 "좌익 연대는 CNA를 성공적으로 완전히 패배시켰습니다. 기독교 우파의 권위주의적 성향이 온건 좌파에 대한 지지를 급증시켰고, 이제 콜렝과 그의 지나치게 비대해진 정당은 쫓아내졌습니다.\n\n그러나, CNA의 완전한 단일 통합과는 달리 좌익 연대는 단순히 편리한 선거 연합이었으며, VDB의 좌익자유주의자들과 SDAP의 사회민주주의자들은 여전히 자신만의 계획과 이상을 가지고 다른 정당으로 남아있습니다. 통합을 위한 몇가지 성의 없는 노력들은 소리 높여져갔고, 따라서 좌익 연대는 더 이상 없습니다.\n\n분명히 SDAP는 이 연합에서 더 컸으며, 따라서 그들은 누구와 협력할 지 선택할 수 있는 위치에 있습니다. 빌헬미나 여왕은 그들에게 자신은 사회자유주의자에게만 총리 자리를 줄 의향이 있다고 알렸으며, 따라서 새로운 정부를 구성하는데 교착 상태가 없이 알바르다가 총리가 되는 것은 불가능합니다."
-holel.2.a:0 "VDB-SDAP의 온건 연립 정부가 세워지고 아우트가 총리가 된다."
-holel.2.b:0 "SDAP는 RSAP와 일할 것이고 알바르다가 총리가 된다."
+holel.2.d:0 "좌익 연대는 CNA를 성공적으로 완전히 패배시켰습니다. 기독교 우파의 권위주의적 성향이 온건 좌파에 대한 지지를 급증시켰고, 이제 콜렝과 그의 지나치게 비대해진 정당은 쫓아내졌습니다.\n\n그러나, CNA의 완전한 단일 통합과는 달리 좌익 연대는 단순히 편리한 선거 연합이었으며, VDB의 좌익자유주의자들과 SDAP의 사회민주주의자들은 여전히 자신만의 계획과 이상을 가지고 다른 정당으로 남아있습니다. 통합을 위한 몇가지 성의 없는 노력들은 소리 높여져갔고, 따라서 좌익 연대는 더 이상 없습니다.\n\n분명히 SDAP는 이 연합에서 더 컸으며, 따라서 그들은 누구와 협력할 지 선택할 수 있는 위치에 있습니다. 빌헬미나 여왕은 그들에게 자신은 사회자유주의자에게만 조각 책임자 자리를 줄 의향이 있다고 알렸으며, 따라서 새로운 정부를 구성하는데 교착 상태가 없이 알바르다가 조각 책임자가 되는 것은 불가능합니다."
+holel.2.a:0 "VDB-SDAP의 온건 연립 정부가 세워지고 아우트가 조각 책임자가 된다."
+holel.2.b:0 "SDAP는 RSAP와 일할 것이고 알바르다가 조각 책임자가 된다."
 
 holel.3.t:0 "중도 우파 내각"
 holel.3.d:0 "CNA의 도박이 성과를 거두었습니다! 다수의 유권자들을 잃었음에도 불구하고, 그 의회 연합은 반대편을 휩쓸어 버릴 수 있을 만큼 충분히 큰 것으로 증명되었습니다. 경건하지 못한 사회주의자들은 완전히 겁을 먹었고 당분간은 꼼짝도 하지 않을 것으로 보입니다. 이제 다음 정부, 네번째 콜렝 내각을 형성할 때가 되었습니다.\n\n간신히 과반수를 차지했음에도 불구하고 많은 유명 CNA 당원들은 이번 성과가 CNA가 여전히 국민의 권한을 가지고 있다는 것을 의미하며, 따라서 스스로 내각을 구성해야 한다고 확신하고 있습니다. 하지만, 우리의 다수가 단지 근소한 차이에 불과하기 때문에, 당 내부의 어떤 반대도 이런 혼란스러운 시기에 굳건함을 필요로 하는 내각을 불안정하게 만들 수 있습니다.\n\n과반수는 차지했지만 득표율은 감소함에 따라, 현재 고사 직전인 LSP는 우리를 돕기 위해 내각에 합류하는 것을 제안했고, 일부 반동 분자들은 이번 선거의 승리가 충분하지 않다고 말합니다. 심지어 고위 인사들은 붉은 위협을 근절하기 위한 자원을 사용하기 위해 VNH에 협력할 생각까지 내보이고 있습니다."
@@ -937,13 +937,13 @@ holel.4.a:0 "CNA와 연정을 만들어라."
 holel.4.b:0 "란트바흐트와 함께 하도록 의회를 '설득'하라."
 
 holel.5.t:0 "빌헬미나 여왕의 퇴위"
-holel.5.d:0 "Disillusioned with the unconventional outcome of the elections, Queen Wilhelmina has announced that she will abdicate.\nShortly after this announcement the demissionary Colijn government then asked the new parliament to approve the financing of the crowning ceremony, yet the RSAP and republican wing of the SDAP voted the suggestion away.\nAfter the voting procedures Henk Sneevliet came outside to speak to the crowd of people and NRFers and declared that 'the queen has abdicated and the former government is rapidly packing its bags. The Dutch left has won!'\nThe day after the Red Front stopped other parliamentarians from entering parliament, and voted a completely rewritten, socialist, constitution in."
+holel.5.d:0 "선거의 이례적인 결과에 환멸을 느낀 빌헬미나 여왕은 퇴위할 것이라고 발표했습니다.\n이 발표가 있은 직후, 아직 권력을 유지하고 있는 콜렝 정부는 새로운 의회에 왕위계승식을 하기 위한 재정을 승인할 것을 요청했지만, SDAP의 RSAP및 공화 주의 단체가 그 제안을 투표로 부결시켰습니다.\n투표 절차가 끝난 후 헹 스티블리트는 군중들과 NRF 지지자들에게 연설하기 위해 밖으로 나와 '여왕은 퇴위했고 전 정부는 재빨리 짐을 싸고 있다. 네덜란드의 좌파가 이겼다!' 라고 선언했습니다.\n붉은 전선이 다른 의원들의 의회 진출을 저지한 다음 날에, 완전히 새로 작성된 사회주의 헌법이 투표에 들어갔습니다."
 holel.5.a:0 "공화국 만세!"
 
 holel.6.t:0 "빌헬미나 여왕의 퇴위"
-holel.6.d:0 "Queen Wilhelmina was unwilling to give Albarda the post of Formateur, despite the fact that he had won a resounding victory in the elections. As a result Albarda had announced that he would only take part in a coalition if he would become prime minister, meaning he would need to work with the RSAP.\n\nCritics are now saying Wilhelmina pushed Albarda into radicalism and many are demanding that she resigns, it wouldn't take long."
+holel.6.d:0 "빌헬미나 여왕은 알바르다가 선거에서 압승을 거두었음에도 불구하고 그에게 조각 책임자 자리를 주기를 꺼려 했습니다. 그 결과, 알바르다는 총리가 될 때만 연정에 참여하겠다고 발표했는데, 이것은 그가 RSAP와 협력해야 한다는 것을 의미합니다.\n\n이제 비평가들은 빌헬미나가 알바르다를 급진주의로 몰고 갔으며 많은 사람들이 그녀가 사임할 것을 요구하고 있고, 오래 걸리지 않을 것이라고 말하고 있습니다."
 holel.6.a:0 "공화국 만세!"
-holel.6.b:0 "Juliana is crowned and makes Albarda Formateur."
+holel.6.b:0 "율리아나가 왕위를 물려받고 알바르다가 조각 책임자가 되었다."
 
 holel.7.t:0 "레인데르스 장군이 지원을 요청하다"
 holel.7.d:0 "We have been watching our small neighbour, the Netherlands, for quite some time. It has become apparent that the Dutch left has won this year's elections and that it may soon join find itself being ruled by syndicalists. This is a worrying development as the Ruhr area is heavily dependent on the Dutch harbour of Rotterdam.\n\nToday the leader of the Dutch armed forces, Izaak Reijnders, came here to ask for support to launch a putsch; this could be the perfect opportunity to ensure the Dutch government remains aligned with our interests. Others however argue that in those days of crisis it should not be Germany's place to mess with other countries, even less so when it would cost money or resources."
@@ -977,8 +977,8 @@ holvdb.1.b:0 "Peren."
 
 hol.4.t:0 "네덜란드의 지도자"
 hol.4.d:0 "It is time to select a ruler to lead the Netherlands, who are now reduced to our puppet state. While it seems obvious that general Reijnders should be put in charge on the local side of things, it depends on whether we trust him: we could install the duchess of Luxembourg as queen of the Netherlands as she has a light claim and will be very motivated to move the Netherlands towards annexation into the empire (as this would expand her domain and thus political power within it), or we could establish the husband of the Dutch crown-princess as regent. Lastly it is of course also possible to just give Reijnders a free hand."
-hol.4.a:0 "Long live Queen Maria Adelheid!"
-hol.4.b:0 "Long live Prince Bernhard"
+hol.4.a:0 "마리아델라이드 여왕 만세!"
+hol.4.b:0 "베른하르트 공 만세!"
 hol.4.c:0 "No, I can't cheer for Reijnders, sorry..."
 
 hol.6.t:0 "노동자 파업"
