--- a/Kaiserreich Korean Translation/localisation/KR_Switzerland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Switzerland_l_english.yml
@@ -925,25 +925,25 @@ swiss.179.d:0 "The Commune of France has found itself soundly defeated and remov
 swiss.179.a:0 "Peace reigns!"
 
 ### Parties ###
-SWI_national_populist_party:0 "SVV"
+SWI_national_populist_party:0 "스위스 조국당"
 SWI_national_populist_party_long:0 "스위스 조국당"
-SWI_syndicalist_party:0 "SPdS"
+SWI_syndicalist_party:0 "스위스 생디칼리즘당"
 SWI_syndicalist_party_long:0 "스위스 생디칼리즘당"
-SWI_social_democrat_party:0 "SP"
+SWI_social_democrat_party:0 "스위스 사회민주당"
 SWI_social_democrat_party_long:0 "스위스 사회민주당"
-SWI_social_liberal_party:0 "LdU"
+SWI_social_liberal_party:0 "독립 동맹"
 SWI_social_liberal_party_long:0 "독립 동맹"
-SWI_market_liberal_party:0 "FDP"
+SWI_market_liberal_party:0 "자유민주당"
 SWI_market_liberal_party_long:0 "자유민주당"
-SWI_social_conservative_party:0 "BGB"
+SWI_social_conservative_party:0 "상인, 농부, 베른당"
 SWI_social_conservative_party_long:0 "상인, 농부, 베른당"
-SWI_authoritarian_democrat_party:0 "CVP"
+SWI_authoritarian_democrat_party:0 "스위스 기독민주당"
 SWI_authoritarian_democrat_party_long:0 "스위스 기독민주당"
-SWI_paternal_autocrat_party:0 "NBS"
+SWI_paternal_autocrat_party:0 "스위스 국민운동"
 SWI_paternal_autocrat_party_long:0 "스위스 국민운동"
-SWI_totalist_party:0 "UN"
+SWI_totalist_party:0 "전국 연합"
 SWI_totalist_party_long:0 "전국 연합"
-SWI_radical_socialist_party:0 "PdA"
+SWI_radical_socialist_party:0 "스위스 노동당"
 SWI_radical_socialist_party_long:0 "스위스 노동당"
 
 ### Opinion Modifiers ###
