--- a/Kaiserreich Korean Translation/localisation/KR_Cuba_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Cuba_l_english.yml
@@ -10,25 +10,25 @@ CUB_CAF_Cuban_Minster_no:0 "장관들은 선거를 기다릴 것입니다"
 havana_general_strike:0 "아바나 총파업"
 
 ### Parties ###
-CUB_totalist_party:0 "URC"
+CUB_totalist_party:0 "쿠바 혁명 연합"
 CUB_totalist_party_long:0 "쿠바 혁명 연합"
-CUB_radical_socialist_party:0 "PSP"
+CUB_radical_socialist_party:0 "대중사회주의당"
 CUB_radical_socialist_party_long:0 "대중사회주의당"
-CUB_syndicalist_party:0 "PSP"
+CUB_syndicalist_party:0 "대중사회주의당"
 CUB_syndicalist_party_long:0 "대중사회주의당"
-CUB_social_democrat_party:0 "CSD"
+CUB_social_democrat_party:0 "사회민주주의 연합"
 CUB_social_democrat_party_long:0 "사회민주주의 연합"
-CUB_social_liberal_party:0 "PLC"
+CUB_social_liberal_party:0 "쿠바 자유당"
 CUB_social_liberal_party_long:0 "쿠바 자유당"
-CUB_market_liberal_party:0 "PLC"
+CUB_market_liberal_party:0 "쿠바 자유당"
 CUB_market_liberal_party_long:0 "쿠바 자유당"
-CUB_social_conservative_party:0 "PUC"
+CUB_social_conservative_party:0 ""헌법연합당"
 CUB_social_conservative_party_long:0 "헌법연합당"
-CUB_authoritarian_democrat_party:0 "CNP"
+CUB_authoritarian_democrat_party:0 "쿠바 진보파"
 CUB_authoritarian_democrat_party_long:0 "쿠바 진보파"
-CUB_paternal_autocrat_party:0 "CNP"
+CUB_paternal_autocrat_party:0 "쿠바 중도파"
 CUB_paternal_autocrat_party_long:0 "쿠바 중도파"
-CUB_national_populist_party:0 "CNP"
+CUB_national_populist_party:0 "쿠바 우파"
 CUB_national_populist_party_long:0 "쿠바 우파"
 
 ### Events ###
