--- a/Kaiserreich Korean Translation/localisation/KR_Turkey_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Turkey_l_english.yml
@@ -6,23 +6,23 @@ tur_irredentism:0 "터키의 투쟁"
 tur_peaceful:0 "세계 평화"
 
 ### Parties ###
-TUR_totalist_party:0 "DHP"
+TUR_totalist_party:0 "인민혁명당"
 TUR_totalist_party_long:0 "인민혁명당"
-TUR_syndicalist_party:0 "TSP"
+TUR_syndicalist_party:0 "터키 생디칼리스트당"
 TUR_syndicalist_party_long:0 "터키 생디칼리스트당"
-TUR_radical_socialist_party:0 "HKP"
+TUR_radical_socialist_party:0 "인민해방당"
 TUR_radical_socialist_party_long:0 "인민해방당"
-TUR_social_democrat_party:0 "SDP"
+TUR_social_democrat_party:0 "사회민주당"
 TUR_social_democrat_party_long:0 "사회민주당"
-TUR_social_liberal_party:0 "SCP"
+TUR_social_liberal_party:0 "자유공화당"
 TUR_social_liberal_party_long:0 "자유공화당"
-TUR_market_liberal_party:0 "DP"
+TUR_market_liberal_party:0 "민주당"
 TUR_market_liberal_party_long:0 "민주당"
-TUR_social_conservative_party:0 "MP"
+TUR_social_conservative_party:0 "국민당"
 TUR_social_conservative_party_long:0 "국민당"
-TUR_authoritarian_democrat_party:0 "CHP"
+TUR_authoritarian_democrat_party:0 "공화인민당"
 TUR_authoritarian_democrat_party_long:0 "공화인민당"
-TUR_paternal_autocrat_party:0 "MNP"
+TUR_paternal_autocrat_party:0 "국가니잠당"
 TUR_paternal_autocrat_party_long:0 "국가니잠당"
 TUR_national_populist_party:0 "회색 늑대"
 TUR_national_populist_party_long:0 "회색 늑대 무리"
