--- a/Kaiserreich Korean Translation/localisation/KR_Insulindia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Insulindia_l_english.yml
@@ -38,21 +38,21 @@
  
 ### Parties ###
  INS_totalist_party:0 "PTI"
- INS_totalist_party_long:0 "Partai Totalis Insulindia"
+ INS_totalist_party_long:0 "인술인디아 전체주의당"
  INS_syndicalist_party:0 "PVI"
- INS_syndicalist_party_long:0 "Persuatan Vakbonded Insulindia"
- INS_radical_socialist_party:0 "Murba"
- INS_radical_socialist_party_long:0 "Partai Murba"
+ INS_syndicalist_party_long:0 "인술인디아 노동자연맹 조직"
+ INS_radical_socialist_party:0 "무르바"
+ INS_radical_socialist_party_long:0 "무르바 당"
  INS_social_democrat_party:0 "PSI"
- INS_social_democrat_party_long:0 "Partai Sosialis Insulindia"
+ INS_social_democrat_party_long:0 "인술인디아 사회당"
  INS_social_liberal_party:0 "PSI"
- INS_social_liberal_party_long:0 "Partai Sosialis Insulindia"
- INS_market_liberal_party:0 "Golkar"
- INS_market_liberal_party_long:0 "Partai Golongan Karya"
+ INS_social_liberal_party_long:0 "인술인디아 사회당"
+ INS_market_liberal_party:0 "골카르"
+ INS_market_liberal_party_long:0 "직능 단체 연합 정당"
  INS_social_conservative_party:0 "Nahdlatul Ulama"
  INS_social_conservative_party_long:0 "Nahdlatul Ulama"
  INS_authoritarian_democrat_party:0 "PNI"
- INS_authoritarian_democrat_party_long:0 "Partai Nasional Insulindia"
+ INS_authoritarian_democrat_party_long:0 "인술인디아 국민당"
  INS_paternal_autocrat_party:0 "Ngi-Sultan Monarchists/DI"
  INS_paternal_autocrat_party_long:0 "Ngi-Sultan Monarchists/Darul Islam"
  INS_national_populist_party:0 "APRA"
