--- a/Kaiserreich Korean Translation/localisation/KR_Greece_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Greece_l_english.yml
@@ -64,7 +64,7 @@ GRE_free_trade_idea:0 "자유 무역 정책"
 GRE_export_focus_idea:0 "수출 주도 경제"
 GRE_finding_our_own_way_idea:0 "자급자족 초점"
 GRE_planned_industry_idea:0 "산업 계획"
-GRE_new_enterprise_idea:0 “새로운 기업"
+GRE_new_enterprise_idea:0 "새로운 기업"
 GRE_liberalization_idea:0 "정치적 자유"
 GRE_neuter_military_idea:0 "군사적 통제"
 GRE_strong_and_free_idea:0 "Strong and Free"
