--- a/Kaiserreich Korean Translation/localisation/core_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/core_l_english.yml
@@ -1,4 +1,60 @@
 l_english:
+
+### Loading Messages ###
+LOADING_GUI:0 "명예로운 평화에 서명하는 중"
+#"Loading GUI"
+LOADING_HISTORY:0 "트로츠키를 운둔시키는 중"
+#"Loading History"
+LOADING_SAVEGAME:0 "역사를 다시 쓰는 중: $NAME$"
+#"Loading savegame: $NAME$"
+LOADING_SAVEGAME_NO_NAME:0 "역사를 다시 쓰는 중"
+#"Loading savegame"
+LOADING_DATABASES:0 "생디칼리스트들을 숙청하는 중"
+#"Loading databases"
+LOADING_MAP_SPRITES:0 "군주주의자들을 탄압하는 중"
+#"Loading sprites"
+LOAD_GFX_PDXMAP_SHADERS:0 "사슬을 끊는 중"
+#"Loading Map(Creating Shaders)..."
+LOAD_GFX_PDXMAP_TERRAIN:0 "Finding a place in the sun"
+#"Loading Map(Creating Terrain)..."
+LOAD_GFX_PDXMAP_BORDERS:0 "몽골 제국을 복원하는 중"
+#"Loading Map(Creating Borders)..."
+LOAD_GFX_PDXMAP_TEXTURES:0 "서방 제국주의자들을 추방하는 중"
+#"Loading Map(Creating Textures)..."
+LOAD_GFX_PDXMAP_TREES:0 "케렌스키를 암살하는 중"
+#"Loading Map(Creating Trees)..."
+LOAD_GFX_PDXMAP_RIVERS:0 "모든 사람을 왕으로 만드는 중"
+#"Loading Map(Creating Rivers)..."
+LOAD_GFX_PDXMAP_STATIC_OBJECTS:0 "우리의 부를 나누는 중"
+#"Loading Map(Creating objects)..."
+LOAD_EVENTS:0 "이중 군주제를 중앙 집권화 하는 중"
+#"Loading Events"
+LOAD_GFX:0 "Fighting a land war in Asia"
+#"Loading Graphics"
+LOADING_MAIN_MENU:0 "Propping up dying empires"
+#"Loading main menu"
+PRECALC_NAVAL_DIST:0 "Smuggling in Shanghai"
+#"Precalculating Naval Distances"
+EXITING_TO_FRONTEND:0 "Restoring Napoleon"
+#"Returning to main menu"
+LOAD_INIT:0 "Deploying the Kaiserliche Marine"
+#"Initialising Game..."
+LOAD_FLAGS:0 "미국의 민주주의를 구하는 중"
+#"Creating Flags"
+PROC_FLAGS:0 "중화 제국을 재건하는 중"
+#"Processing Flags"
+INIT_MAP_LOGIC:0 "아프리카로 탈출하는 중"
+#"Initialising map logic"
+INIT_GAMESTATE:0 "Treating the Sick Man"
+#"Initialising game"
+EXECUTE_HISTORY:0 "라인 강을 감시하는 중"
+#"Executing history"
+CREATING_CHKSUM:0 "Implementing Direct Rule"
+#CREATING_CHKSUM:0 "Apologising for late patches"
+#"Creating checksum"
+GENERATING_GRADIENT_BORDERS:0 "혁명을 배반하는 중"
+#"Generating Gradient Borders"
+
  SEPARATION_LINE:0 "--------------\n"
  MENU_MESSAGES_DISABLE_ALL:0 "모두 비활성화"
  FILTER:0 "필터"
@@ -292,8 +348,9 @@ l_english:
  MENU_BAR_IRONMAN_PLAIN:0 "철인"
  MENU_HOMEPAGE:0 "카이저라이히 Wiki"
  MENU_FORUM:0 "카이저라이히 Forum"
- MENU_FACEBOOK:0 "Hearts of Iron IV Facebook"
- MENU_TWITTER:0 "카이저라이히 Twitter"
+ #MENU_FACEBOOK:0 "Hearts of Iron IV Facebook"
+ MENU_TWITTER:0 "카이저라이히 트위터"
+ MENU_PRIVACY_POLICY:0 "개인정보 정책"
  MAIN_MENU:0 "메인메뉴"
  MAIN_MENU_BACK:0 "메뉴로 돌아가기"
  HELP_MENU:0 "도움말"
