--- a/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
@@ -102,7 +102,33 @@ BM_HISTORY_TITLE:0 "간단한 역사"
 KR_SCENARIO_NAME:0 "세계 대전의 유산"
 KR_SCENARIO_DESC:0 "1936년은 세계사의 전환점이 될 것입니다. 거대한 기회인 동시에 위협이 다가오는 때입니다. 독일 제국과 프랑스 코뮌 사이의 긴장감이 거세지고 있습니다. 러시아와 미합중국은 내분의 조짐이 나타나고 있으며 쇠락한 제국 오스트리아와 오스만은 쇠퇴하고 있습니다. 한편 노동조합주의, 전체주의 그리고 급진사회주의는 전 세계에 뿌리내리고 있습니다. 세계 대전 종전 후 15년. 옛 적국들이 다시 고개를 들고 있습니다. 단 하나의 불씨만으로도 이 화약고는 폭발하게 될 것입니다..."
 
-### Featured Nations ###
+### Major Nations ###
+
+### Germany ###
+GER_KR_GATHERING_STORM_DESC:0 "1919년, 5년의 전쟁 끝에 독일군은 프랑스에서 협상국의 방어선을 무너뜨렸습니다. 그리고 1921년, 영국의 항복이 뒤따랐습니다. 세계 대전은 독일을 유일무이한 강대국으로 만들어 주었지만, 1930년대 이후로 독일은 내리막길을 걷고 있습니다. 후퇴하는 세계 경제로 인해 독일의 산업력이 약화된 반면 다른 국가들의 제조업은 회복되었고, 독일의 동부 위성국들에서는 민족주의가 퍼져 제국에서 떠나가기를 원하고 있습니다. 1936년, 독일은 갈림길에 서있고, 우리는 과거의 적들이 예전의 힘을 되찾는 동안 강대한 제국이 이미 금이 가고 있는 것을 보았습니다..."
+
+### Austria ###
+AUS_KR_GATHERING_STORM_DESC:0 "'분리되지도 나누어지지도 않는다' - 세계 대전의 여파는 이중제국이 그렇지 않다는 것을 입증했습니다. 승리했음에도 불구하고, 전쟁은 제국 내의 문화, 계급 그리고 이념의 분열을 드러내었고 전쟁이 끝나고도 내부의 불안은 계속되었습니다. 카를 황제는 다민족 제국이 20세기에서도 살아남을 수 있도록 개혁하기 위해 노력했고 일련의 대규모 개혁들을 실시했습니다. 하지만, 그의 개혁은 제국의 헝가리 측을 배제했었고 일리리아 반란으로 인한 위기는 양 측간의 긴장만을 조장했습니다. 오스트리아가 제국을 유지할 수 있을지 시간이 지나면 알게 될 것입니다..."
+
+### Commune of France ###
+FRA_KR_GATHERING_STORM_DESC:0 "제3 공화국은 자신이 시작된 것과 같은 방식으로 끝났습니다: 독일군에게 패배했고, 본국에서 혁명을 맞이했습니다. 1919년, CGT에 의해 시작된 총파업은 부르주아 정부의 몰락을 초래했습니다. 15년 동안, 새로운 '프랑스 코뮌'은 공안위원회를 비롯한 생디칼리즘-사회주의 사이의 합의의 발판 위에서 단결할 수 있었습니다. 하지만 1936년, 국가를 재건하고 혁명을 수호해야할 필요성은 많은 비판자들에게 낡아빠진 것으로 여겨지고 있고 보다 급진적인 정책에 대한 요구가 커지고 있습니다. 프랑스는 자신의 사명에 확신을 가지고 있지만, 앞으로 어떤 혁명 분파가 권력을 장악할 지는 불분명합니다..."
+
+### Union of Britain ###
+ENG_KR_GATHERING_STORM_DESC:0 "1921년 '명예로운 평화' 이후 세계 대전은 끝났고, 본토에서 대중들의 신뢰와 지지는 사라졌습니다. 1925년, 재앙이 발생했습니다: 소규모 노동 쟁의가 TUC에 의한 총파업으로 빠르게 커졌고, 노동자들의 파업에 이어 군인들이 탈영하기 시작했습니다. 대규모 폭동의 발생 6주 후, 왕실과 대부분의 엘리트들은 캐나다로 도주했고 대신 새로운 노동 조합 대표 회의가 정권을 장악했습니다. 현재 영국인들은 고립되어 사회주의를 구축하는데 만족하고 있지만, 캐나다의 왕당파들이 연방에 대해 음모를 꾸미는 것을 그냥 내버려 둘 수 없다고 많은 사람들이 생각하기 시작했습니다..."
+
+### Canada ###
+CAN_KR_GATHERING_STORM_DESC:0 "1925년 혁명 이후, 왕실과 영국인 망명자들은 캐나다로 피신했습니다. 보수당의 지원을 받아 그들은 본토를 되찾을 날을 꿈꾸며 준-공식적인 망명 정부를 설립했습니다. 하지만 모든 일이 잘 풀려가는 것은 아닙니다. RB 베넷의 보수당은 1935년의 선거에서 '진보주의자'들의 느슨한 연합으로 이제 과반수의 의석을 차지하고 영국 망명자들과 왕의 커져가는 영향력에 맞서 캐나다 의회의 주권을 확고히 하기 위해 노력하는 매켄지 킹의 자유당에게 패배했습니다. 세계의 정치 상황이 악화되면서, 국내외의 격렬한 갈등의 무대가 만들어졌습니다..."
+
+### Russia ###
+RUS_KR_GATHERING_STORM_DESC:0 "러시아 내전 동안, 백군은 가진 모든 것을 가지고 싸웠지만, 적군은 여전히 국가의 산업 중심부를 장악했었습니다. 하지만 독일 제국이 붉은 러시아를 두려워해 백군을 지원하며 개입하기로 결정했습니다. 2년 후, 모스크바와 페트로그라드는 백군에게 넘어갔고 새로운 러시아 공화국이 설립되었습니다. 지난 15년 동안, 여당인 S-R과 카데츠의 불안한 연합은 케렌스키 대통령의 밑에서 러시아를 다스려왔지만, 러시아는 점차 불안정해지고 있습니다. 다른 정치 세력들이 성장하고 있으며, 그들은 세계에 러시아의 힘을 다시 보여주기 위해 변화할 시간이 지금이라고 생각하고 있습니다..."
+
+### United States ###
+USA_KR_GATHERING_STORM_DESC:0 "고립주의를 자처하던 미합중국은 세계 대전 당시 개입 쪽으로 정책이 기울 뻔 했지만, 결국에는 전쟁에서 벗어나 있었습니다. 이것은 동맹국의 승리로 이어졌습니다. 그 이후로, 미합중국은 유럽 무역 기회에 있어서 경제적으로 어려움을 겪어왔고 협상국의 빚 상환은 독일의 승리로 인해 불가능해졌습니다. 여전히 국제적으로 '아무 것도 아닌 곳'으로 여겨지는 미합중국은 커져가는 내부의 반대를 마주쳤는데, 공화당-민주당의 독주 체제가 두 단체에게 도전받았습니다 - 바로 생디칼리스트들과 아메리카 우선당입니다. 커져만 가는 본국에서의 위기와 해외에서의 긴장감은, 미합중국에게 좋지 않은 상황입니다..."
+
+### Japan ###
+JAP_KR_GATHERING_STORM_DESC: "'명예로운 평화'는 식민지에 대한 일본의 권리를 보장해줬지만, 욱일제국에서 모든 것이 잘 풀린 것은 아닙니다. 경제적 동요 이후 1926년 생디칼리스트의 히로히토 섭정-왕자 암살 시도로 그 극에 이르렀고, 불안정한 정부는 또다른 위기의 해를 보냈습니다; 첫 문제는 다나카 장군이었고, 다음은 민주 연립 내각이었으며 그 다음은 북동부 중국에 대한 개입이었습니다. 1936년, 일본은 제국을 확장할 태세를 취했습니다. 독일의 지배가 쇠퇴하고 있는 것으로 보이는 가운데, 일본인들은 남은 청나라의 영토와 독일의 태평양 지역들을 탐내고 있습니다..."
+
+### Minor Nations ###
 
 ### Argentina ###
 ARG_KR_GATHERING_STORM_DESC:0 "Chaos reigns supreme in Argentina as the LP under Manuel Carles is in the midst of a military coup to take full control of the country. Meanwhile syndicalist supporters are still holding on to their rump state in Patagonia, thwarting all offensives thus far. Pressured by the fact that war is all but unavoidable, industrialisation has been kick-started in the nation out of necessity. While initial reports indicate some success, there is a long way to go..."
@@ -604,7 +630,6 @@ continuous_boost_freedom_desc:0 "By reorganising our colonial bureaucracy and re
 continuous_restrict_freedom:0 "속국 탄압"
 continuous_restrict_freedom_desc:0 "Our colonial subjects have gotten rather silly ideas about things like "self-determination" or "national independence". It is time to disabuse them of these notions."
 unlocks_decision:0 "해금된 결단: "
-
 ### Generic Focuses ###
 generic_army_effort:0 "제트 항공기 제조사"
 generic_army_effort_desc:0 "The Weltkrieg, from its start to its end, changed warfare forever by finally ending Napoleonic Warfare's grasp on military thought and confirming the extreme deadliness of the rifle, machine gun and artillery cannon. Our army must adapt or perish, in a literal sense."
