--- a/Kaiserreich Korean Translation/localisation/KR_Chinese_Republic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Chinese_Republic_l_english.yml
@@ -195,7 +195,7 @@ repchi.2.a:0 "Republican China Fights For The Chinese Worker's livelihood!"
 repchi.3.t:0 "공화국 정부"
 repchi.3.d:0 "The instigators have emerged from hiding, but they already control most of the region."
 repchi.3.a:0 "우리는 반란군을 박살내고 안정을 되찾아야 한다!"
-repchi.4.t:0 "산청의 제안"
+repchi.4.t:0 "상청의 제안"
 repchi.4.d:0 "The Shangqing traditionalists have offered us an alliance to secure China for the Chinese, this might benefit both of us, but we shall see what happens in the end."
 repchi.4.a:0 "중국인들을 위한 중국!"
 repchi.4.b:0 "Send them away"
