--- a/Kaiserreich Korean Translation/localisation/KR_Shanqing_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Shanqing_l_english.yml
@@ -33,28 +33,28 @@ SQI_national_populist_party:0 "형제단"
 SQI_national_populist_party_long:0 "형제단"
 
 ### Opinion Modifiers ###
-GER_MANCHU_EMP:0 "Germany supports our Manchu Empire... at a cost."
-JAP_PuYi_YES:0 "Japan will put Pu-Yi"
-JAP_PuYi_NO:0 "Japan won't put Pu-Yi"
-SQI_Funds_rev_south:0 "Shangqing funds a revolution in the South"
-SQI_DEM_VLA:0 "산청이 블라보스토크를 요구함"
-SQI_DEM_SAS_GER:0 "산청이 동남아시아를 요구함"
-SQI_DEM_SAS:0 "산청이 동남아시아를 요구함"
+GER_MANCHU_EMP:0 "독일이 우리의 만주 제국을 비용으로 지원함"
+JAP_PuYi_YES:0 "일본이 푸이를 보냄"
+JAP_PuYi_NO:0 "일본이 푸이를 보내지 않음"
+SQI_Funds_rev_south:0 "상청이 남부의 혁명을 지원함"
+SQI_DEM_VLA:0 "상청이 블라보스토크를 요구함"
+SQI_DEM_SAS_GER:0 "상청이 동남아시아를 요구함"
+SQI_DEM_SAS:0 "상청이 동남아시아를 요구함"
 TIAN_south_AOG:0 "천이 남쪽을 확장함"
 TIAN_south_CHI:0 "천이 남쪽을 확장함"
 TIAN_west_MON:0 "천이 서쪽을 확장함"
 TIAN_west_XSM:0 "천이 서쪽을 확장함"
 TIAN_north:0 "천이 북쪽을 확장함"
-TIAN_no_expansion:0 "Tian won't expand more"
-TIAN_south_LEC_70:0 "Tian Annexes the Legation Cities"
-TIAN_south_LEC_30:0 "Tian Annexes the Legation Cities"
-TIAN_south_LEC_20:0 "Tian puppets the Legation Cities"
-TIAN_south_LEC_10:0 "Tian puppets the Legation Cities"
-TIAN_south_LEC_ps_20:0 "Tian won't do nothing to the Legation Cities"
-TIAN_south_LEC_ps_10:0 "Tian won't do nothing to the Legation Cities"
-TIAN_attack_LEC:0 "Tian attack the Legation Cities"
-Tian_neg_TIB:0 "Tian negotiates with us"
-TIB_send_dipl_away:0 "Tibet send our diplomats away"
+TIAN_no_expansion:0 "천이 확장하지 않을 것임"
+TIAN_south_LEC_70:0 "천이 공사관 도시를 합병함"
+TIAN_south_LEC_30:0 "천이 공사관 도시를 합병함"
+TIAN_south_LEC_20:0 "천이 공사관 도시를 합병함"
+TIAN_south_LEC_10:0 "천이 공사관 도시를 합병함"
+TIAN_south_LEC_ps_20:0 "천이 공사관 도시를 건들지 않음"
+TIAN_south_LEC_ps_10:0 "천이 공사관 도시를 건들지 않음"
+TIAN_attack_LEC:0 "천이 공사관 도시를 공격함"
+Tian_neg_TIB:0 "천이 우리와 협상함"
+TIB_send_dipl_away:0 "티베트와 우리에게 외교관을 보냄"
 Tian_capture_PuYi:0 "천이 푸이를 생포함"
 
 ### Events ###
