--- a/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
@@ -150,21 +150,21 @@ CAN_release_GBR:0 "§Y[GBR.GetNameDefCap]§!이 만들어 질 것입니다."
 USA_broke_promise:0 "그들의 약속을 어긴다"
 
 ### Parties ###
-CAN_totalist_party:0 "CCP"
+CAN_totalist_party:0 "캐나다 공산당"
 CAN_totalist_party_long:0 "캐나다 공산당"
-CAN_radical_socialist_party:0 "UFL"
+CAN_radical_socialist_party:0 "캐나다 합동조합"
 CAN_radical_socialist_party_long:0 "캐나다 합동조합"
-CAN_syndicalist_party:0 "CSC"
+CAN_syndicalist_party:0 "농부노동자연합"
 CAN_syndicalist_party_long:0 "농부노동자연합"
-CAN_social_democrat_party:0 "CCF"
+CAN_social_democrat_party:0 "협동연방연맹"
 CAN_social_democrat_party_long:0 "협동연방연맹"
-CAN_social_liberal_party:0 "진보주의자"
+CAN_social_liberal_party:0 "진보당"
 CAN_social_liberal_party_long:0 "진보당"
-CAN_market_liberal_party:0 "자유주의자"
+CAN_market_liberal_party:0 "자유당"
 CAN_market_liberal_party_long:0 "자유당"
-CAN_social_conservative_party:0 "보수주의자"
+CAN_social_conservative_party:0 "토리당"
 CAN_social_conservative_party_long:0 "토리당"
-CAN_authoritarian_democrat_party:0 "국가주의자"
+CAN_authoritarian_democrat_party:0 "국가단결당"
 CAN_authoritarian_democrat_party_long:0 "국가단결당"
 CAN_paternal_autocrat_party:0 "왕당파"
 CAN_paternal_autocrat_party_long:0 "군주-왕당파"
