--- a/Kaiserreich Korean Translation/localisation/KR_Transamur_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Transamur_l_english.yml
@@ -392,16 +392,16 @@ tram.127.b:0 "It's better than nothing!"
 tram.127.c:0 "What a rude person..."
 
 ### Parties ###
-TRM_totalist_party:0 "FETP"
-TRM_radical_socialist_party:0 "TSP"
-TRM_syndicalist_party:0 "FESP"
-TRM_social_democrat_party:0 "PFER"
-TRM_social_liberal_party:0 "FEDM"
-TRM_market_liberal_party:0 "PPM"
-TRM_social_conservative_party:0 "ZKP"
-TRM_authoritarian_democrat_party:0 "JID"
-TRM_paternal_autocrat_party:0 "MG"
-TRM_national_populist_party:0 "IRL"
+TRM_totalist_party:0 "극동 전체주의당"
+TRM_radical_socialist_party:0 "트란스아무르 사회주의당"
+TRM_syndicalist_party:0 "극동 생디칼리스트당
+TRM_social_democrat_party:0 "인민 극동당"
+TRM_social_liberal_party:0 "극동 민주연맹"
+TRM_market_liberal_party:0 "인민 자유당"
+TRM_social_conservative_party:0 "젬스키크라이당"
+TRM_authoritarian_democrat_party:0 "일본 제국 대표단"
+TRM_paternal_autocrat_party:0 "군사정부"
+TRM_national_populist_party:0 "제국 복건 연맹"
 TRM_totalist_party_long:0 "극동 전체주의당"
 TRM_radical_socialist_party_long:0 "트란스아무르 사회주의당"
 TRM_syndicalist_party_long:0 "극동 생디칼리스트당"
