--- a/Kaiserreich Korean Translation/localisation/KR_Shanqing_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Shanqing_l_english.yml
@@ -11,23 +11,23 @@ tian_reserach_inst:0 "재무 조사"
 qie_pesants_join_our_army:0 "청나라 농민이 군에 합류"
 
 ### Parties ### (Shangqing Parties)
-SQI_totalist_party:0 "CPP"
+SQI_totalist_party:0 "중화인민당"
 SQI_totalist_party_long:0 "중화인민당"
-SQI_radical_socialist_party:0 "CPP"
+SQI_radical_socialist_party:0 "중화인민당"
 SQI_radical_socialist_party_long:0 "중화인민당"
-SQI_syndicalist_party:0 "CPP"
+SQI_syndicalist_party:0 "중화인민당"
 SQI_syndicalist_party_long:0 "중화인민당"
-SQI_social_democrat_party:0 "CDSP"
+SQI_social_democrat_party:0 "중국 민주사회당"
 SQI_social_democrat_party_long:0 "중국 민주사회당"
-SQI_social_liberal_party:0 "DPC"
+SQI_social_liberal_party:0 "중국 민주당"
 SQI_social_liberal_party_long:0 "중국 민주당"
 SQI_market_liberal_party:0 "국민당"
 SQI_market_liberal_party_long:0 "국민당"
 SQI_social_conservative_party:0 "지식인들"
-SQI_social_conservative_party_long:0 "지식인파"
-SQI_authoritarian_democrat_party:0 "IP"
+SQI_social_conservative_party_long:0 "지식인 진영"
+SQI_authoritarian_democrat_party:0 "황실당"
 SQI_authoritarian_democrat_party_long:0 "황실당"
-SQI_paternal_autocrat_party:0 "IP"
+SQI_paternal_autocrat_party:0 "황실당"
 SQI_paternal_autocrat_party_long:0 "황실당"
 SQI_national_populist_party:0 "형제단"
 SQI_national_populist_party_long:0 "형제단"
