--- a/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
@@ -1162,7 +1162,7 @@ hol.44.d:0 "All ships planned by the naval expansion are now completed, allowing
 hol.44.a:0 "Geweldig!"
 
 ### Post '37 Election Events ###
-holpostel.1.t:0 "빈넨호프가 저격당하다"
+holpostel.1.t:0 "Binnenhof Fire"
 holpostel.1.d:0 "Marinus van der Lubbe, a syndicalist already notorious for his pyromania, has set fire to the Binnenhof, the seat of the Dutch government.\nAlready the 국가재건연합 has called for a country-wide attack on left-wing elements of any kind and it remains to be seen whether we can avoid such an outcome after this.\nThe left meanwhile, has sought to prove that the fire was caused by the 국가재건연합 in an attempt to frame them, but no one really considers that a realistic scenario, considering Van der Lubbe's history and the fact that he was apprehended at the very scene of the fire."
 holpostel.1.a:0 "Keep calm and carry on!"
 holpostel.1.b:0 "Declare a state of emergency!"
