--- a/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
@@ -1167,7 +1167,7 @@ holpostel.1.d:0 "Marinus van der Lubbe, a syndicalist already notorious for his 
 holpostel.1.a:0 "Keep calm and carry on!"
 holpostel.1.b:0 "Declare a state of emergency!"
 
-holpostel.2.t:0 "반생디칼리즘 폭동"
+holpostel.2.t:0 "Anti-Syndicalist Riots"
 holpostel.2.d:0 "The rhetoric of the 국가재건연합, and especially its deputy leader Cornelis van Geelkerken, seems to have taken grip on the Dutch populace. Moderates who earlier might have dismissed the party as paranoid radicals have now taken up arms en-masse to join the 국가재건연합's calls for organised action against what they have labelled a systematic attempt to bring revolution to the Netherlands.\n\nThe results of this hostile rhetoric have been riots across the nation targeting known socialists as well as a number of leftist institutions. There have even been reports of Landwacht-backed attempts to break into the 사회민주노동당 party headquarters hoping to take control over membership records. Some have suggested this was done in order to assist nationwide attacks on everything leftwards of the 자유민주연맹.\n\nWhat should our response be to this upsurge in violence?"
 holpostel.2.a:0 "Let the riots take place."
 holpostel.2.b:0 "Have the police intervene."
