--- a/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
@@ -92,13 +92,13 @@ spolchemie:0 "스폴츠헤미에"
 tesla_company:0 "테슬라"
 
 ### Bolivia ###
-EAA:0 "Escuela de Aplicación de Armas"
-EMA:0 "Escuela Militar de Aviación"
-EMN:0 "Escuela de Mecánica y de Navegación"
-SAG:0 "Supremo Academia de Guerra"
+EAA:0 "무기 응용 학교"
+EMA:0 "군사 항공 학교"
+EMN:0 "항해 및 정비 학교"
+SAG:0 "최고 전쟁 학교"
 SOBOCE:0 "SOBOCE"
-UMSA:0 "Universidad Mayor de San Andres"
-FCAB:0 "Ferrocarril Antofagosta"
+UMSA:0 "산 안드레스 대학교"
+FCAB:0 "안토파가스타 철도"
 
 ### Bosnia ###
 aluminij:0 "Aluminij"
@@ -133,30 +133,30 @@ kaproni_bulgarski:0 "카프로니 불가스키"
 ### Canada ###
 dominion_steel_and_coal:0 "도미니언 철강 & 석탄 주식회사"
 bell_canada:0 "벨 캐나다"
-canadian_marconi_company:0 "Canadian Marconi Company"
+canadian_marconi_company:0 "캐나다 마르코니 회사"
 imperial_oil:0 "임페리얼 정유"
-canadian_arsenals:0 "Canadian Arsenals Ltd."
-dominion_cartridge:0 "Dominion Cartridge Co."
-canadian_industries_limited:0 "Canadian Industries Limited"
-royal_canadian_ordnance_corps:0 "Royal Canadian Ordnance Corps"
-general_motors_canada:0 "General Motors Canada"
-massey_harris:0 "Massey-Harris"
+canadian_arsenals:0 "캐나다 유한 무기고"
+dominion_cartridge:0 "자치령 화약 회사"
+canadian_industries_limited:0 "캐나다 유한 산업회사"
+royal_canadian_ordnance_corps:0 "캐나다 왕실 육군 병기부대"
+general_motors_canada:0 "제너럴 모터스 캐나다"
+massey_harris:0 "매시-해리스"
 leyland:0 "레이랜드 모터스"
 canadian_pacific:0 "캐나다 태평양 철도"
-canadian_car:0 "Canadian Car & Foundry"
-montreal_locomotive_works:0 "Montreal Locomotive Works"
-avro_canada:0 "Avro Canada"
+canadian_car:0 "캐나다 자동차 & 주조 공장"
+montreal_locomotive_works:0 "몬트리올 기관차"
+avro_canada:0 "아브로 캐나다"
 bristol:0 "브리스톨"
-canadair:0 "Canadair"
-de_havilland_canada:0 "de Havilland Canada"
-fairey_aviation_canada:0 "Fairey Aviation Canada"
+canadair:0 "캐나데어"
+de_havilland_canada:0 "드 하빌랜드 캐나다"
+fairey_aviation_canada:0 "페어리 항공 캐나다"
 gloster:0 "글로스터"
-yarrow_shipbuilders:0 "Yarrow Shipbuilders"
-davie_shipbuilding:0 "Davie Shipbuilding"
+yarrow_shipbuilders:0 "야로우 조선소"
+davie_shipbuilding:0 "데이비 선박회사"
 halifax_shipyard:0 "헬리팩스 조선소"
 canadian_vickers:0 "캐나다 빅커스"
-orenda_engines:0 "Orenda Engines"
-raac_canada:0 "Royal Atlantic Aeronautics"
+orenda_engines:0 "오렌다 엔진"
+raac_canada:0 "왕립 대서양 항공"
 
 ### Combined Syndicates of America ###
 kr_us_steel:0 "US 철강"
@@ -1297,7 +1297,7 @@ WLL_Jules_Vincotte_mil_th:0 "Jules Vincotte"
 WLL_Andre_Becquet_mil_th:0 "André Becquet"
 
 ### Nejd ###
-mitteleuropa_weaponry:0 "Mitteleuropean Weaponry"
+mitteleuropa_weaponry:0 "중앙 유럽 무기"
 
 ### Venezuela ###
 VEN_sivensa:0 "Siderúrgica Venezolana S.A."
