--- a/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
@@ -131,7 +131,7 @@ darzhavna_aeroplanna_rabotilnitsa:0 "Darzhavna Aeroplanna Rabotilnitsa"
 kaproni_bulgarski:0 "카프로니 불가스키"
 
 ### Canada ###
-dominion_steel_and_coal:0 "도미니언 철강 & 석탄 주식회사"
+dominion_steel_and_coal:0 "자치령 철강 & 석탄 주식회사"
 bell_canada:0 "벨 캐나다"
 canadian_marconi_company:0 "캐나다 마르코니 회사"
 imperial_oil:0 "임페리얼 정유"
@@ -149,14 +149,14 @@ avro_canada:0 "아브로 캐나다"
 bristol:0 "브리스톨"
 canadair:0 "캐나데어"
 de_havilland_canada:0 "드 하빌랜드 캐나다"
-fairey_aviation_canada:0 "페어리 항공 캐나다"
+fairey_aviation_canada:0 "페어리 캐나다 항공"
 gloster:0 "글로스터"
 yarrow_shipbuilders:0 "야로우 조선소"
 davie_shipbuilding:0 "데이비 선박회사"
 halifax_shipyard:0 "헬리팩스 조선소"
 canadian_vickers:0 "캐나다 빅커스"
 orenda_engines:0 "오렌다 엔진"
-raac_canada:0 "왕립 대서양 항공"
+raac_canada:0 "왕립 아틀란틱 항공"
 
 ### Combined Syndicates of America ###
 kr_us_steel:0 "US 철강"
