--- a/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -97,36 +97,36 @@ SER_YUG_national_populist:0 "유고슬라비아"
 SER_YUG_national_populist_ADJ:0 "유고슬라비아"
 SER_YUG_national_populist_DEF:0 "유고슬라비아"
 
-NPA_totalist:0 "National Protection Alliance"
-NPA_totalist_ADJ:0 "NPA"
-NPA_totalist_DEF:0 "the National Protection Alliance"
-NPA_syndicalist:0 "National Protection Alliance"
-NPA_syndicalist_ADJ:0 "NPA"
-NPA_syndicalist_DEF:0 "the National Protection Alliance"
-NPA_radical_socialist:0 "National Protection Alliance"
-NPA_radical_socialist_ADJ:0 "NPA"
-NPA_radical_socialist_DEF:0 "the National Protection Alliance"
-NPA_social_democrat:0 "National Protection Alliance"
-NPA_social_democrat_ADJ:0 "NPA"
-NPA_social_democrat_DEF:0 "the National Protection Alliance"
-NPA_social_liberal:0 "National Protection Alliance"
-NPA_social_liberal_ADJ:0 "NPA"
-NPA_social_liberal_DEF:0 "the National Protection Alliance"
-NPA_market_liberal:0 "National Protection Alliance"
-NPA_market_liberal_ADJ:0 "NPA"
-NPA_market_liberal_DEF:0 "the National Protection Alliance"
-NPA_social_conservative:0 "National Protection Alliance"
-NPA_social_conservative_ADJ:0 "NPA"
-NPA_social_conservative_DEF:0 "the National Protection Alliance"
-NPA_authoritarian_democrat:0 "National Protection Alliance"
-NPA_authoritarian_democrat_ADJ:0 "NPA"
-NPA_authoritarian_democrat_DEF:0 "the National Protection Alliance"
-NPA_paternal_autocrat:0 "National Protection Alliance"
-NPA_paternal_autocrat_ADJ:0 "NPA"
-NPA_paternal_autocrat_DEF:0 "the National Protection Alliance"
-NPA_national_populist:0 "National Protection Alliance"
-NPA_national_populist_ADJ:0 "NPA"
-NPA_national_populist_DEF:0 "the National Protection Alliance"
+NPA_totalist:0 "호국동맹"
+NPA_totalist_ADJ:0 "호국동맹"
+NPA_totalist_DEF:0 "호국동맹"
+NPA_syndicalist:0 "호국동맹"
+NPA_syndicalist_ADJ:0 "호국동맹"
+NPA_syndicalist_DEF:0 "호국동맹"
+NPA_radical_socialist:0 "호국동맹"
+NPA_radical_socialist_ADJ:0 "호국동맹"
+NPA_radical_socialist_DEF:0 "호국동맹"
+NPA_social_democrat:0 "호국동맹"
+NPA_social_democrat_ADJ:0 "호국동맹"
+NPA_social_democrat_DEF:0 "호국동맹"
+NPA_social_liberal:0 "호국동맹"
+NPA_social_liberal_ADJ:0 "호국동맹"
+NPA_social_liberal_DEF:0 "호국동맹"
+NPA_market_liberal:0 "호국동맹"
+NPA_market_liberal_ADJ:0 "호국동맹"
+NPA_market_liberal_DEF:0 "호국동맹"
+NPA_social_conservative:0 "호국동맹"
+NPA_social_conservative_ADJ:0 "호국동맹"
+NPA_social_conservative_DEF:0 "호국동맹"
+NPA_authoritarian_democrat:0 "호국동맹"
+NPA_authoritarian_democrat_ADJ:0 "호국동맹"
+NPA_authoritarian_democrat_DEF:0 "호국동맹"
+NPA_paternal_autocrat:0 "호국동맹"
+NPA_paternal_autocrat_ADJ:0 "호국동맹"
+NPA_paternal_autocrat_DEF:0 "호국동맹"
+NPA_national_populist:0 "호국동맹"
+NPA_national_populist_ADJ:0 "호국동맹"
+NPA_national_populist_DEF:0 "호국동맹"
 
 TIE_totalist:0 "중화인민공화국"
 TIE_totalist_ADJ:0 "중국"
@@ -153,7 +153,7 @@ TIE_authoritarian_democrat:0 "천 제국"
 TIE_authoritarian_democrat_ADJ:0 "천"
 TIE_authoritarian_democrat_DEF:0 "천 제국"
 TIE_paternal_autocrat:0 "천 제국"
-TIE_paternal_autocrat_ADJ:0 ""
+TIE_paternal_autocrat_ADJ:0 "천"
 TIE_paternal_autocrat_DEF:0 "천 제국"
 TIE_national_populist:0 "천 제국"
 TIE_national_populist_ADJ:0 "천"
@@ -906,12 +906,12 @@ BAT_FED_totalist:0 "발트 연합"
 BAT_FED_totalist_ADJ:0 "발트"
 BAT_FED_totalist_DEF:0 "발트 연합"
 
-BAT_GER_authoritarian_democrat:0 "Baltischer Staat"
-BAT_GER_authoritarian_democrat_ADJ:0 "Baltic"
-BAT_GER_authoritarian_democrat_DEF:0 "the Baltischer Staat"
-BAT_GER_paternal_autocrat:0 "Baltisches Herzogtum"
-BAT_GER_paternal_autocrat_ADJ:0 "Baltic"
-BAT_GER_paternal_autocrat_DEF:0 "the Baltisches Herzogtum"
+BAT_GER_authoritarian_democrat:0 "발트 국"
+BAT_GER_authoritarian_democrat_ADJ:0 "발트"
+BAT_GER_authoritarian_democrat_DEF:0 "발트 국"
+BAT_GER_paternal_autocrat:0 "발트 공작령"
+BAT_GER_paternal_autocrat_ADJ:0 "발트"
+BAT_GER_paternal_autocrat_DEF:0 "발트 공작령"
 
 ITA_kingdom_authoritarian_democrat:0 "이탈리아 왕국"
 ITA_kingdom_authoritarian_democrat_ADJ:0 "이탈리아"
@@ -3520,58 +3520,58 @@ NUSCOM_syndicalist_DEF:0 "누산타라 코뮌"
 NUSCOM_radical_socialist:0 "누산타라 코뮌"
 NUSCOM_radical_socialist_ADJ:0 "누산타라"
 NUSCOM_radical_socialist_DEF:0 "누산타라 코뮌"
-NUSCOM_social_democrat:0 "인술린디아"
-NUSCOM_social_democrat_ADJ:0 "인술린디아"
-NUSCOM_social_democrat_DEF:0 "인술린디아"
-NUSCOM_social_liberal:0 "인술린디아"
-NUSCOM_social_liberal_ADJ:0 "인술린디아"
-NUSCOM_social_liberal_DEF:0 "인술린디아"
-NUSCOM_market_liberal:0 "인술린디아"
-NUSCOM_market_liberal_ADJ:0 "인술린디아"
-NUSCOM_market_liberal_DEF:0 "인술린디아"
-NUSCOM_social_conservative:0 "인술린디아"
-NUSCOM_social_conservative_ADJ:0 "인술린디아"
-NUSCOM_social_conservative_DEF:0 "인술린디아"
-NUSCOM_authoritarian_democrat:0 "인술린디아"
-NUSCOM_authoritarian_democrat_ADJ:0 "인술린디아"
-NUSCOM_authoritarian_democrat_DEF:0 "인술린디아"
-NUSCOM_paternal_autocrat:0 "인술린디아 이슬람국"
-NUSCOM_paternal_autocrat_ADJ:0 "인술린디아"
-NUSCOM_paternal_autocrat_DEF:0 "인술린디아 이슬람국"
-NUSCOM_national_populist:0 "인술린디아 연방"
-NUSCOM_national_populist_ADJ:0 "인술린디아"
-NUSCOM_national_populist_DEF:0 "인술린디아 연방"
+NUSCOM_social_democrat:0 "인술인디아"
+NUSCOM_social_democrat_ADJ:0 "인술인디아"
+NUSCOM_social_democrat_DEF:0 "인술인디아"
+NUSCOM_social_liberal:0 "인술인디아"
+NUSCOM_social_liberal_ADJ:0 "인술인디아"
+NUSCOM_social_liberal_DEF:0 "인술인디아"
+NUSCOM_market_liberal:0 "인술인디아"
+NUSCOM_market_liberal_ADJ:0 "인술인디아"
+NUSCOM_market_liberal_DEF:0 "인술인디아"
+NUSCOM_social_conservative:0 "인술인디아"
+NUSCOM_social_conservative_ADJ:0 "인술인디아"
+NUSCOM_social_conservative_DEF:0 "인술인디아"
+NUSCOM_authoritarian_democrat:0 "인술인디아"
+NUSCOM_authoritarian_democrat_ADJ:0 "인술인디아"
+NUSCOM_authoritarian_democrat_DEF:0 "인술인디아"
+NUSCOM_paternal_autocrat:0 "인술인디아 이슬람국"
+NUSCOM_paternal_autocrat_ADJ:0 "인술인디아"
+NUSCOM_paternal_autocrat_DEF:0 "인술인디아 이슬람국"
+NUSCOM_national_populist:0 "인술인디아 연방"
+NUSCOM_national_populist_ADJ:0 "인술인디아"
+NUSCOM_national_populist_DEF:0 "인술인디아 연방"
 
 INSULT_totalist:0 "누산타라 코뮌"
 INSULT_totalist_ADJ:0 "누산타라"
 INSULT_totalist_DEF:0 "누산타라 코뮌"
 INSULT_syndicalist:0 "누산타라 코뮌"
-INSULT_syndicalist_ADJ:0 "인술린디아"
+INSULT_syndicalist_ADJ:0 "인술인디아"
 INSULT_syndicalist_DEF:0 "누산타라 코뮌"
-INSULT_radical_socialist:0 "인술린디아"
-INSULT_radical_socialist_ADJ:0 "인술린디아"
-INSULT_radical_socialist_DEF:0 "인술린디아"
-INSULT_social_democrat:0 "인술린디아"
-INSULT_social_democrat_ADJ:0 "인술린디아"
-INSULT_social_democrat_DEF:0 "인술린디아"
-INSULT_social_liberal:0 "인술린디아"
-INSULT_social_liberal_ADJ:0 "인술린디아"
-INSULT_social_liberal_DEF:0 "인술린디아"
-INSULT_market_liberal:0 "인술린디아"
-INSULT_market_liberal_ADJ:0 "인술린디아"
-INSULT_market_liberal_DEF:0 "인술린디아"
-INSULT_social_conservative:0 "인술린디아"
-INSULT_social_conservative_ADJ:0 "인술린디아"
-INSULT_social_conservative_DEF:0 "인술린디아"
-INSULT_authoritarian_democrat:0 "인술린디아"
-INSULT_authoritarian_democrat_ADJ:0 "인술린디아"
-INSULT_authoritarian_democrat_DEF:0 "인술린디아"
-INSULT_paternal_autocrat:0 "인술린디아 술탄국"
-INSULT_paternal_autocrat_ADJ:0 "인술린디아"
-INSULT_paternal_autocrat_DEF:0 "인술린디아 술탄국"
-INSULT_national_populist:0 "인술린디아 연방"
-INSULT_national_populist_ADJ:0 "인술린디아"
-INSULT_national_populist_DEF:0 "인술린디아 연방"
+INSULT_radical_socialist:0 "인술인디아"
+INSULT_radical_socialist_ADJ:0 "인술인디아"
+INSULT_radical_socialist_DEF:0 "인술인디아"
+INSULT_social_democrat:0 "인술인디아"
+INSULT_social_democrat_ADJ:0 "인술인디아"
+INSULT_social_democrat_DEF:0 "인술인디아"
+INSULT_social_liberal:0 "인술인디아"
+INSULT_social_liberal_ADJ:0 "인술인디아"
+INSULT_social_liberal_DEF:0 "인술인디아"
+INSULT_market_liberal:0 "인술인디아"
+INSULT_market_liberal_ADJ:0 "인술인디아"
+INSULT_market_liberal_DEF:0 "인술인디아"
+INSULT_social_conservative:0 "인술인디아"
+INSULT_social_conservative_ADJ:0 "인술인디아"
+INSULT_social_conservative_DEF:0 "인술인디아"
+INSULT_authoritarian_democrat:0 "인술인디아"
+INSULT_authoritarian_democrat_ADJ:0 "인술인디아"
+INSULT_authoritarian_democrat_DEF:0 "인술인디아"
+INSULT_paternal_autocrat:0 "인술인디아 술탄국"
+INSULT_paternal_autocrat_ADJ:0 "인술인디아"
+INSULT_paternal_autocrat_DEF:0 "인술인디아 술탄국"
+INSULT_national_populist:0 "인술인디아 연방"
+INSULT_national_populist_ADJ:0 "인술인디아"
+INSULT_national_populist_DEF:0 "인술인디아 연방"
 
 FOP_WIN_ARG_totalist:0 "아르헨티나 코뮌"
 FOP_WIN_ARG_totalist_ADJ:0 "아르헨티나"
