--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -323,10 +323,6 @@ annex.89.e:0 "이탈리아와 프랑스에 스위스 분할을 제안하라"
 annex.90.t:0 "독일어권 스위스가 우리 통제하에 들어왔습니다"
 annex.90.d:0 "구 스위스의 독일어권 칸톤이 마침내 우리의 통제에 들어오게 되었습니다."
 annex.90.a:0 "좋았어!"
-annex.91.t:0 "스위스 독립"
-annex.91.d:0 "We have granted independence to Switzerland and welcomed them into the Reichspakt system. Some politicians argue, however, that we should arrange for their close control under a puppet regime."
-annex.91.a:0 "독립을 허가한다"
-annex.91.b:0 "괴뢰정부를 세운다"
 annex.92.t:0 "스위스 분할"
 annex.92.d:0 "The German Empire, currently occupying the former country of Switzerland, has proposed a partition of the old Confederation with us. They have offered us the former Italian-speaking cantons of Ticino and Graubunden, centred in the town of Lugano."
 annex.92.a:0 "훌륭한 제안이군!"
@@ -379,6 +375,7 @@ annex.107.t:0 "리비아 합병"
 annex.107.d:0 "After a long fight with the Libyans, we have launched a full offensive and forced the Libyan Army to surrender. Tripoli is now in our hands!"
 annex.107.a:0 "군사점령을 계속해라!"
 annex.107.b:0 "리비아를 해방하라!"
+annex.107.c:0 "제국에 재통합시켜라!"
 annex.108.t:0 "이집트 합병"
 annex.108.d:0 "After a long fight with the Egyptians, we have launched a full offensive and forced the Egyptian Army to surrender. Cairo is now in our hands!"
 annex.108.a:0 "군사점령을 계속해라!"
@@ -629,11 +626,16 @@ annex.157.a:0 "프랑스 괴뢰정부를 설립해라."
 annex.157.b:0 "프랑스 본토를 분할하라!"
 annex.157.c:0 "부고타뉴와 프랑스를 해방하라."
 annex.157.e:0 "전체를 합병하는 것이 낫다."
+annex.157.f:0 "국민프랑스가 우리와 동맹을 맺는다면 영토를 줄 수 있다!"
+annex.157.g:0 "프랑스를 북부와 옥시타니아로 나누어라"
+annex.157.h:0 "코뮌을 해방시켜라!"
+annex.157.i:0 "땅을 우리의 프랑스 동맹에게 주어라!"
 annex.158.t:0 "남부 프랑스의 운명"
 annex.158.d:0 "We now control the southern half of France, the north is out of reach but we still need to find a way to control that region more efficiently."
 annex.158.a:0 "프랑스 괴뢰정부를 설립해라."
 annex.158.b:0 "옥타니아를 해방하라."
 annex.158.c:0 "지역을 점령하는편이 더 낫다."
+annex.158.e:0 "땅을 우리의 프랑스 동맹에게 주어라!"
 annex.159.t:0 "영국 분할"
 annex.159.d:0 "After defeating the Union of Britain we now control Great Britain. We can partition these lands and create new countries with loyal governments or create an united Great Britain."
 annex.159.a:0 "잉글랜드, 스코틀랜드, 웨일즈로 나눠라"
@@ -744,6 +746,7 @@ annex.182.t:0 "아르헨티나의 운명"
 annex.182.d:0 "After the conquest of the vast nation of Argentina we have to organise competent administrations to keep the territory under control. What should be the fate of the region?"
 annex.182.a:0 "아르헨티나 전부를 해방시켜라"
 annex.182.b:0 "아르헨티나와 파타고니아를 해방시켜라"
+annex.182.c:0 "FOP에게 주어라"
 annex.183.t:0 "조선의 운명"
 annex.183.d:0 "자랑스러운 한민족의 해방 이후 우리는 정복한 한국의 정부를 조직 할 책임이 있습니다. 무엇을 해야할까요?"
 annex.183.a:0 "왕실 한국을 해방하라!"
@@ -962,6 +965,10 @@ annex.239.a:0 "아랍 연합국을 만들어라!"
 annex.239.b:0 "쿠르드스탄과 바그다드의 아랍 지역을 나눠라"
 annex.239.c:0 "모든 땅을 쿠르드스탄에게 주어라!"
 annex.239.e:0 "땅을 우리의 마쉬리치 괴뢰국에게 주어라"
+annex.239.g:0 "땅을 우리의 아랍 동맹에게 주어라"
+annex.239.h:0 "땅을 우리의 이란 동맹에게 주어라"
+annex.239.i:0 "땅을 우리의 쿠르드 동맹에게 주어라"
+annex.239.j:0 "메소포타미아땅만 해방시킨다"
 annex.239.f:0 "점령하라!"
 annex.240.t:0 "전 교황령 문제"
 annex.240.d:0 "Our recent annexation of Northern Italy has left us with remnants of land that, according to the peace treaty of 1919, should pertain to the Pope. We thus have the option of returning it to its rightful owner, either freely or conditioned to their submission. We could also simply continue the occupation of these lands."
@@ -989,6 +996,23 @@ annex.246.t:0 "파라과이의 운명"
 annex.246.d:0 "Our armies have finally taken control of the Paraguayan capital and occupies the territory of the former state of Paraguay. We should now decide how to set up a competent administration in the area."
 annex.246.a:0 "충성스러운 파라과이를 해방시켜라"
 annex.246.b:0 "군사점령을 유지하라!"
+annex.247.t:0 "팔레스타인의 운명"
+annex.247.d:0 "Our armies have taken control of the southern part of the Levant, and the local Palestinian population is clamoring for self-government. What should we do?"
+annex.247.a:0 "팔레스타인 괴뢰국를 수립해라"
+annex.247.b:0 "군사점령을 유지한다"
+annex.247.c:0 "Give it to our Mishriqi allies"
+annex.248.d:0 "Our armies have taken control of the northern Levant region, and the local Kurdish population is clamoring for self-government. What should we do?"
+annex.248.a:0 "Set up a puppet Kurdish state"
+annex.248.b:0 "Give it to our Turkish allies"
+annex.248.c:0 "Give it to our Iranian allies"
+annex.249.t:0 "The Fate of Cambodia"
+annex.249.d:0 "Our armies have taken control of Phnom Penh, and the local Cambodians are clamoring for self-government. We should decide what's to be done with the region."
+annex.249.a:0 "Set up a puppet Cambodian state"
+annex.249.b:0 "Continue the occupation"
+annex.250.d:0 "Our armies have taken control of Laos, and the locals are clamoring for self-government. We should decide what's to be done with the region."
+annex.250.a:0 "Set up a puppet Laoatian state"
+annex.251.d:0 "Our armies have taken control of Annam, and the local Vietnamese are clamoring for self-government. We should decide what's to be done with the region."
+annex.251.a:0 "Set up a puppet Vietnamese state"
 
 ### Opinion Modifiers ###
 refused_prince:0 "군주 거부"
