--- a/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
@@ -6,8 +6,8 @@ austrian_sphere:0 "도나우-아드리아 연맹"
 austrian_sphere_sued:0 "남동유럽"
 
 BOM_ausgleich_slovak_state:0 "슬로바키아 국가를 약속"
-ILL_ausgleich_backan_claims:0 "트란스 카르파티아를 약속"
-GAL_ausgleich_transcarpathian_claims:0 "바치카를 약속"
+ILL_ausgleich_backan_claims:0 "바치카를 위한 약속"
+GAL_ausgleich_transcarpathian_claims:0 "트란스카르파티아를 위한 약속"
 
 AUS_new_administration:0 "행정 개편"
 
